--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity
             android:name=".databinding.DatabindingActivity"
+            android:label="Databinding"
             android:exported="true">
         </activity>
         <activity
